Revision history for Perl extension App-Gimei

{{$NEXT}}

v0.3.0 2026-01-27T07:47:03Z
    - Switch module manager back to Carton
    - Migrate formatter script from Shell to Perl
    - Format source files and cpanfile
    - Migrated from package to the native class syntax, resulting in a slight performance boost.
    - Remove unused module Class::Tiny
    - Rename the Generators->push() method to add_generator()

v0.2.11 2026-01-17T07:59:58Z
    - Add module dependencies

v0.2.10 2026-01-17T07:23:08Z
    - Support Strawberry Perl for Windows
    - Bump up actions-setup-perl
    - Switch to Carmel from Carton for managing module dependencies
    - Add DEVELOPMENT.md
    - Changed to fix module versions in cpanfile      

v0.2.9 2026-01-16T04:40:28Z
    - bump perl v5.38

v0.2.8 2024-07-12T05:04:22Z
    - support Getopt::Long-2.58

v0.2.7 2024-07-11T18:29:47Z
    - update cpanfile
    - update perl version on GitHub Actions
    - use Test2::Bundle::More instead of Test::More

v0.2.6 2024-02-27T17:11:58Z
    - fix garbled text in help option

v0.2.5 2024-02-22T19:26:26Z
    - introduce Generators
    - Parser was defined as a class
    - organize packages
    - rewrite with subroutine signature
    - perltidy
    - change field name rendering
    - move error handling of unprocessed tokens from render() to parse_arg()

v0.2.4 2023-12-23T12:27:01Z
    - [dev]add modules
    - specify version <5.00 on 'Pod::Text'

v0.2.3 2023-12-18T08:38:25Z
    - delete stale comment
    - update perl version
    - update actions/checkout@v4
    - change default value of gender and word_subtype
    - perl tidy
    - delete unused module
    - [test]do not check exit_code when there's an error message
    - [test]introduce t::Util
    - [test]rename files

v0.2.2 2023-09-21T18:50:38Z
    - parse once

v0.2.1 2023-09-04T18:13:42Z
    - update dependencies

v0.2.0 2022-10-06T08:07:27Z
    - support Data::Gimei v0.4 or later

v0.1.1 2022-06-20T07:04:01Z